--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "production-project",
+  "name": "mnimal-landing-page",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -71,13 +71,14 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
+    "typescript": "^5.7.2",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.13",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
