--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mnimal-landing-page",
+  "name": "bbq-learning-cource",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
